add vim on mac, favicon, README, analytics on Github.io

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Huhu Blog"
+description: "For Knowledge Management, Shareing , etc."
 ---
 
 {% for post in paginator.posts %}
