remove sample posts

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "For Knowledge Management, Shareing , etc."
+description: "For Personal Knowledge Management, Shareing , etc."
 ---
 
 {% for post in paginator.posts %}
